# EzGz

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ezgz.hpp  ezgz_compress.cpp  ezgz_decompress.cpp  ezgz_test.cpp
.github/workflows/: ezgz_test.yml
